gscrot (0.34~ppa1) gutsy; urgency=low

  * added keybindings in menubar
	* added save/revert settings
	* reimplemented message dialogs
	* added support for grabbing window border when not using compiz/beryl
	* added debian folder to source directory
	* load settings automatically at startup

 -- Mario Kemper <mario.kemper@gmx.de>  Do, 10 Apr 2008 19:26:31 +0200 

gscrot (0.33~ppa3) gutsy; urgency=low

  * added homepage to about box

 -- Mario Kemper <mario.kemper@gmx.de>  Mi, 09 Apr 2008 13:19:30 +0200 

gscrot (0.33~ppa2) gutsy; urgency=low

  * initial release

 -- Mario Kemper <mario.kemper@gmx.de>  Mi, 09 Apr 2008 12:50:28 +0200 
