@@ -6,6 +6,7 @@ gscrot (0.34~ppa1) gutsy; urgency=low
 	* added support for grabbing window border when not using compiz/beryl
 	* added debian folder to source directory
 	* load settings automatically at startup
+	* added statusbar to main window
 
  -- Mario Kemper <mario.kemper@gmx.de>  Do, 10 Apr 2008 19:26:31 +0200 
 
